# template

./: .gitignore  CMakeLists.txt
src/: hello  main.cpp
